Security: sanitize auth inputs; UI: login image + title, raise passives; Feature: remove nickname/display-name endpoints and disable username change; Front: profile buttons wired (avatar only)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutoBattleGame - Version Web</title>
+    <title>AutoBattleGame Online</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/animations.css">
     <link rel="stylesheet" href="/css/responsive.css">
@@ -38,11 +38,21 @@
                     <div class="modal-body">
                         <label for="profile-avatar-url" class="modal-label">URL de la photo de profil</label>
                         <input id="profile-avatar-url" type="url" placeholder="https://exemple.com/avatar.png" class="modal-input" />
+                        <div class="modal-footer" style="justify-content:flex-start; gap:8px; margin:6px 0 12px 0; padding:0;">
+                          <button id="profile-save" class="btn btn-compact btn-outline">Changer la photo</button>
+                        </div>
                         <div class="modal-hint">Formats sûrs: https/http. Pour un téléchargement, utilisez un hébergeur fiable (CDN/Cloud).</div>
+                        <div class="divider" style="height:12px"></div>
+                        <label for="profile-new-username" class="modal-label">Changer de pseudo (1x / semaine)</label>
+                        <input id="profile-new-username" type="text" placeholder="Nouveau pseudo" class="modal-input" />
+                        <div class="modal-footer" style="justify-content:flex-start; gap:8px; margin:6px 0 12px 0; padding:0;">
+                          <button id="profile-save-username" class="btn btn-compact btn-outline">Changer le pseudo</button>
+                        </div>
+                        <div class="modal-hint">3-20 caractères, lettres/chiffres/_.</div>
                     </div>
                     <div class="modal-footer">
-                        <button id="profile-save" class="btn btn-primary">Enregistrer</button>
                         <button id="profile-cancel" class="btn btn-secondary">Annuler</button>
+                        <button id="profile-close" class="btn btn-secondary">Fermer</button>
                     </div>
                 </div>
             </div>
